# werwolf-online

./: .gitignore  README.md  TODO
server/: Cargo.toml  database.md  test.sqlite  v01.sql
server/src/: controller.rs  database.rs  ingame.rs  main.rs  notify.rs
server/src/api/: mod.rs  net_types.rs  session.rs
server/src/api/auth/: admin_token.rs  mod.rs  player_token.rs  session_id.rs  token.rs
server/src/page_hosting/: controller.rs  mod.rs
webapp/: base.ts  jsconfig.json  package.json  tsconfig.json
webapp/admin_ui/login/: login.html  login.ts
webapp/admin_ui/overview/: overview.html  overview.ts
webapp/admin_ui/session/: session.html  session.ts
webapp/css/: base.css  controller.css  controller_session.css  ingame.css  start.css
webapp/pages/: controller.html  controller_login.html  controller_overview.html  controller_session.html  ingame.html  start.html
webapp/src/: admin-login.ts  api.ts  controller.ts  errors.ts  ingame.ts  start.ts  ui.ts  user-login.ts  utils.ts  websocket.ts
webapp/src/controller/: controller-login.ts  controller.ts  controller_overview.ts  controller_session.ts
webapp/user_ui/ingame/: ingame.html  ingame.ts
webapp/user_ui/login/: login.css  login.html  login.ts
