[package]
name = "server"
version = "0.1.0"
authors = ["lokmeinmatz <matze.kind@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
log = "0.4"
simple_logger = "1.5.0"
serde = {version = "1.0.104", features = ["derive"]}
jsonwebtoken = "5.0.1"
rocket_contrib = "0.4.2"
rusqlite = {version = "0.21.0", features = ["bundled"]}
tungstenite = "0.10.1"
ctrlc = "3.1.4"